ingress-nginx/templates/basic_auth.yml
#@ load("@ytt:data", "data")
#@ load("@ytt:assert", "assert")
#@ load("_ytt.lib.yml", "labels", "podAntiAffinity")

#@ if len(data.values.basic_auth.username) == 0 or data.values.basic_auth.username == "username":
#@  assert.fail("basic_auth.username is missing or invalid")
#@ end
#@ if len(data.values.basic_auth.password) == 0 or data.values.basic_auth.password == "password":
#@  assert.fail("basic_auth.password is missing or invalid")
#@ end
---
kind: Service
apiVersion: v1
metadata:
  name: basic-auth
  namespace: ingress-nginx
  labels: #@ labels("basic-auth-http-service")
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector: #@ labels("basic-auth-http-service")

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-auth
  namespace: ingress-nginx
  labels: #@ labels("basic-auth-http-service")
spec:
  selector:
    matchLabels: #@ labels("basic-auth-http-service")
  replicas: #@ data.values.basic_auth.replicas
  template:
    metadata:
      labels: #@ labels("basic-auth-http-service")
    spec:
      securityContext:
        runAsUser: 2000
        runAsGroup: 2000
        fsGroup: 2000
      affinity: #@ podAntiAffinity("basic-auth-http-service")
      containers:
      - name: basic-auth
        image: #@ data.values.basic_auth.image
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "16Mi"
            cpu: "10m"
          limits:
            memory: "32Mi"
            cpu: "50m"
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080

#@ if data.values.basic_auth.replicas > 1:
