ingress-nginx/templates/network_policy.yml
#@ load("@ytt:data", "data")

#@ if data.values.ingress.enable_network_policy:
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
  ingress:
  - {} #! allow all incoming traffic to ingress-controller
#@ end
